<resources>
    <string name="MyProject">Blood Bank</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="AboutUs">
     This is a Blood Bank Management Application that keeps track of patients who require blood urgently and also helps in searching for a donor. \nCreated by Nandita Nandakumar and Pournami Pottekat
    </string>
    <string name="why_donate_blood">Why Donate Blood?</string>
    <string name="donate">Donating Blood is a vital way to help save lives..</string>
    <string name="Point1">1.Blood Donation is a community responsibility. While you are reading this, there might be a patient in search of blood.</string>
    <string name="Point2">2.About one in seven people entering the hospital needs blood.</string>
    <string name="Point3">3. When you donate blood, it puts a smile on someone else\'s face.It is a gift of life.</string>
    <string name="Point4">BE A HERO.DONATE BLOOD</string>
    <string name="blood_information">Blood Information</string>
    <string name="save_life">Save Life....</string>
    <string name="home_page">Home Page</string>
    <string name="search_for_a_donor">Search for a Donor</string>
    <string name="donate_blood">Donate Blood</string>
    <string name="register">REGISTER</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="create_password">Create Password</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_blood_group">Enter your Blood Group</string>
    <string name="registerBtn">Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one</string>
    <string name="donate_blood_save_life">Donate Blood, Save Life</string>
    <string name="city">City</string>
    <string name="my_profile">My Profile</string>
    <string name="fullname">FullName</string>
    <string name="reset">Reset</string>

    <!--    For Search Donor Fragment-->
    <array name="Blood_Group">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </array>

    <string-array name="division_list">
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Delhi</item>
        <item>Kolkata</item>
        <item>Thrissur</item>
        <item>Rajasthan</item>
        <item>Nagur</item>
        <item>Nashik</item>

    </string-array>

</resources>