<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffa07a"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Login">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/login"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_shape"
        android:drawableLeft="@drawable/ic_shapeemail"
        android:drawablePadding="15dp"
        android:hint="@string/email_address"
        android:id="@+id/Email"
        android:padding="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_shapepassword"
        android:drawablePadding="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/Password"
        android:background="@drawable/round_shape" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:textColor="#000"
            android:buttonTint="#000"
            android:checked="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reset"
            android:text="@string/forgot_password"
            android:drawableStart="@drawable/ic_shapeforpassword"
            android:drawablePadding="5dp"
            android:padding="5dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="0dp"
            android:textColor="#000"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/round_red_shape"
        android:id="@+id/Login"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        android:textSize="20sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_create_one"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:id="@+id/Register"/>
</LinearLayout>