<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffa07a"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".Register">

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="25dp"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.19"/>
    <TextView
        android:id="@+id/TextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_new_account"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView2"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:hint="@string/full_name"
        android:id="@+id/FullName"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@+id/TextView3"
        android:layout_marginTop="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:drawableStart="@drawable/ic_shapename"
        android:drawablePadding="15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:drawableStart="@drawable/ic_shapeemail"
        android:drawablePadding="15dp"
        android:hint="@string/email_address"
        android:id="@+id/Email"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/FullName"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:drawableStart="@drawable/ic_shapepassword"
        android:drawablePadding="15dp"
        android:hint="@string/create_password"
        android:inputType="textPassword"
        android:id="@+id/Password"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/Email"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:drawableStart="@drawable/ic_shapecity"
        android:drawablePadding="15dp"
        android:hint="@string/city"
        android:id="@+id/city"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/Password"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:drawableStart="@drawable/ic_shapephone"
        android:drawablePadding="15dp"
        android:hint="@string/mobile_number"
        android:id="@+id/Phone"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/city"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:hint="@string/enter_your_blood_group"
        android:id="@+id/BG"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/Phone"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerBtn"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_red_shape"
        android:id="@+id/REGISTER"
        app:layout_constraintTop_toBottomOf="@id/BG"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/REGISTER"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textStyle="bold"
        android:id="@+id/Login"/>



</androidx.constraintlayout.widget.ConstraintLayout>